fixed whitespace at bottom of page and space between cards and the left side of the webbrowser

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,7 @@ header {
 .container {
   margin-left: 0;
   margin-right: 0;
+  height: 100vh;
 }
 
 /* current city search and history */
@@ -48,6 +49,7 @@ header {
 h2 {
   font-weight: 500;
   margin-top: 1rem;
+  margin-left: 1rem;
 }
 
 .searchInput {
@@ -77,7 +79,7 @@ h2 {
 }
 
 .searchLI {
-  margin: 0;
+  margin: .25rem;
   padding: 0;
 }
 
@@ -139,6 +141,9 @@ span > i {
 /** end of icons **/
 
 /** main card styles **/
+#mainCard {
+  margin-left: .5rem;
+}
 
 #cityNameMain {
   font-size: 2rem;
@@ -153,7 +158,7 @@ span > i {
 #dayThree,
 #dayFour,
 #dayFive {
-  margin: .5rem;
+  margin: .75rem 0 .5rem 2rem;
   background-color: rgb(0, 155, 245);
   border-radius: .3rem;
   color: white;
